--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 body{
-    background: white;
+    background: green;
+}
+.card{
+    background-color: white;
+    margin: 0 40%;
+    font-size: 32px;  
 }
